Fix an align problem in css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -295,6 +295,10 @@ figure {
   text-align: center;
 }
 
+.hljs-code-div {
+  text-align: left;
+}
+
 .katex-html {
   display: none;
 }
